Edit playing around the caps

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         eum officiis ratione consequatur?
       </p>
       <p class="para item-2">
-        You cannot teach a man anything; you can only help him discover it in
+        <span id="Y">Y</span>ou cannot teach a man anything; you can only help him discover it in
         himself. <br> 
         <span class="name">  - Galileo Galilei</span>
       </p>
       <p class="para item-3">
-        You don’t need to fight if you look strong. If people think you can’t
+        <span id="D">D</span>on’t need to fight if you look strong. If people think you can’t
         be dominated or killed easily, they won’t mess with you. That’s why it’s
         very important to look dangerous. Too much water is never a bad thing
         if you know how to swim and have fun. A mistake repeated more than once
